force-app/main/default/objects/Inventory__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <displayFormat>ITEM-{0000}</displayFormat>
    <label>Item Code</label>
    <type>AutoNumber</type>
</CustomField>