force-app/main/default/objects/Inventory__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>