force-app/main/default/objects/Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select the warehouse where this inventory item is stored.</description>
    <inlineHelpText>Choose the warehouse associated with this inventory item. This field is required.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>