force-app/main/default/objects/Inventory__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Choose the supplier that provides this inventory item. This field is required.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>