force-app/main/default/objects/Inventory__c/validationRules/Reorder_Level_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reorder_Level_Validation</fullName>
    <active>true</active>
    <description>Ensures that the Reorder Level is less than Quantity Available.</description>
    <errorConditionFormula>Reorder_Level__c &gt;= Quantity_Available__c</errorConditionFormula>
    <errorDisplayField>Reorder_Level__c</errorDisplayField>
    <errorMessage>Reorder Level must be less than Quantity Available.</errorMessage>
</ValidationRule>